--- a/exercises/13_07_exercises.tex
+++ b/exercises/13_07_exercises.tex
@@ -11,4 +11,5 @@
 \exsetinput{exercises/13_07_exset_03}
 \exsetinput{exercises/13_07_exset_04}
 \exsetinput{exercises/13_07_exset_05}
+\exsetinput{exercises/13_07_exset_06}
 
