--- a/exercises/13_07_exset_04.tex
+++ b/exercises/13_07_exset_04.tex
@@ -1,8 +1,6 @@
 {\noindent In Exercises} 
-{,  evaluate the integral using the given described solid $D$ using either cylindrical or spherical coordinates as appropriate.
-}
+{,  evaluate the integral using the given described solid $D$ using either cylindrical or spherical coordinates as appropriate.}
 \exinput{exercises/13_07_ex_15}
 \exinput{exercises/13_07_ex_16}
 \exinput{exercises/13_07_ex_17}
 \exinput{exercises/13_07_ex_18}
-
