--- a/exercises/14_01_exset_02.tex
+++ b/exercises/14_01_exset_02.tex
@@ -1,6 +1,5 @@
 {\noindent In Exercises} 
-{,  find the gradient field.
-}
+{,  find the gradient field.}
 \exinput{exercises/14_01_ex_11}
 \exinput{exercises/14_01_ex_12}
 \exinput{exercises/14_01_ex_13}
@@ -9,4 +8,4 @@
 \exinput{exercises/14_01_ex_16}
 \exinput{exercises/14_01_ex_17}
 \exinput{exercises/14_01_ex_18}
-
+\exinput{exercises/14_01_ex_19}
