--- a/text/13_Surface_Area.tex
+++ b/text/13_Surface_Area.tex
@@ -170,9 +170,9 @@ Integrating with order $dx\ dy$ requires us to evaluate $\int \sqrt{10+4x^2}\ dx
 				&=\int_0^4\big(2x\sqrt{10+4x^2}\big)\ dx.
 				\intertext{Apply substitution with $u = 10+4x^2$:}
 				&= \left.\left(\frac16\big(10+4x^2\big)^{3/2}\right)\right|_0^4 \\
-				&= \frac13\big(37\sqrt{74}-5\sqrt{10}\big) \approx 100.825\text{u}^2.
+				&= \frac13\big(37\sqrt{74}-5\sqrt{10}\big) \approx 100.825 \text{square units}.
 \end{align*}
-So while the region $R$ over which we integrate has an area of 16u$^2$, the surface has a much greater area as its $z$-values change dramatically over $R$.
+So while the region $R$ over which we integrate has an area of 16 square units, the surface has a much greater area as its $z$-values change dramatically over $R$.
 }\\
 
 In practice, technology helps greatly in the evaluation of such integrals. High powered computer algebra systems can compute integrals that are difficult, or at least time consuming, by hand, and can at the least produce very accurate approximations with numerical methods. In general, just knowing \textit{how} to set up the proper integrals brings one very close to being able to compute the needed value. Most of the work is actually done in just describing the region $R$ in terms of polar or rectangular coordinates. Once this is done, technology can usually provide a good answer.\\
