--- a/exercises/07_02_ex_23.tex
+++ b/exercises/07_02_ex_23.tex
@@ -1,4 +1,4 @@
-{The goal is to derive the formula for the volume $V$ of a sphere with radius $r$.
+{\label{ex:07_02_ex_23}The goal is to derive the formula for the volume $V$ of a sphere with radius $r$.
 \begin{enumerate}
 \item A sphere with radius $r$ can be formed by revolving what curve about which line?
 \item Use your answer to (a) and the disk method to determine a formula for the volume of a sphere.
