--- a/exercises/13_07_exset_05.tex
+++ b/exercises/13_07_exset_05.tex
@@ -1,6 +1,4 @@
 {\noindent In Exercises} 
-{,  evaluate the integral by first converting to cylindrical or spherical coordinates.
-}
+{,  evaluate the integral by first converting to cylindrical or spherical coordinates.}
 \exinput{exercises/13_07_ex_19}
 \exinput{exercises/13_07_ex_20}
-
