--- a/text/10_Space_Intro.tex
+++ b/text/10_Space_Intro.tex
@@ -40,6 +40,12 @@ One can also consider the $x$-$y$ plane as being a horizontal plane in, say, a r
 %{\mtable{.8}{Plotting the point $P=(2,1,3)$ in space with a perspective used in this text.}{fig:cartcoord2}{\myincludegraphics[scale=1.5,trim=5mm 5mm 3mm 5mm,clip=true]{figures/figcartcoord2}}
 \\
 
+As how the $x$ and $y$ axes divide the plane into four quadrants, the $x$, $y$, and $z$ axes divide space into eight \textbf{octants}.  Only the ``first octant'' (analogous to the first quadrant) will be referred to by name.
+
+\definition{def:first_octant}{First Octant}
+{The \textbf{first octant} is the set of points in space for which $x>0$, $y>0$, and $z>0$. \index{first octant}
+}
+
 \noindent\textbf{\large Measuring Distances}\\
 
 It is of critical importance to know how to measure distances between points in space. The formula for doing so is based on measuring distance in the plane, and is known (in both contexts) as the Euclidean measure of distance.
@@ -256,27 +262,27 @@ Graph the cylinder following cylinders.
 	
 	\begin{center}
 \begin{tabular}{ccc}
+\myincludegraphicsthree{height=65pt,3Dmenu,activate=onclick,deactivate=onclick,
+3Droll=0,
+3Dortho=0.004,
+3Dc2c=4 4 2,
+3Dcoo=0 0 75,
+3Droo=150,
+3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=.9,trim=5mm 5mm 5mm 5mm,clip=true}{figures/figspace4a} &%
 \myincludegraphicsthree{height=90pt,3Dmenu,activate=onclick,deactivate=onclick,
 3Droll=0,
 3Dortho=0.004,
 3Dc2c=4 4 2,
 3Dcoo=0 0 75,
 3Droo=150,
-3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=1.25,trim=5mm 5mm 5mm 5mm,clip=true}{figures/figspace4a} &%
+3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=.9,trim=5mm 5mm 5mm 5mm,clip=true}{figures/figspace4b} &%
 \myincludegraphicsthree{height=90pt,3Dmenu,activate=onclick,deactivate=onclick,
 3Droll=0,
 3Dortho=0.004,
 3Dc2c=4 4 2,
 3Dcoo=0 0 75,
 3Droo=150,
-3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=1.25,trim=5mm 5mm 5mm 5mm,clip=true}{figures/figspace4b} &%
-\myincludegraphicsthree{height=90pt,3Dmenu,activate=onclick,deactivate=onclick,
-3Droll=0,
-3Dortho=0.004,
-3Dc2c=4 4 2,
-3Dcoo=0 0 75,
-3Droo=150,
-3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=1.25,trim=3mm 5mm 3mm 2mm,clip=true}{figures/figspace4c}\\[-0pt]
+3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=.9,trim=3mm 5mm 3mm 2mm,clip=true}{figures/figspace4c}\\[-0pt]
 (a) & (b) & (c)
 \end{tabular}
 \captionsetup{type=figure}
@@ -327,7 +333,7 @@ One of the applications of integration we learned previously was to find the vol
 
 Consider the surface formed by revolving $y=\sqrt{x}$ about the $x$-axis. Cross--sections of this surface parallel to the $y$-$z$ plane are circles, as shown in Figure \ref{fig:surf_rev_intro}(a). Each circle has equation of the form $y^2+z^2=r^2$ for some radius $r$. The radius is a function of $x$; in fact, it is $r(x) = \sqrt{x}$. Thus the equation of the surface shown in Figure \ref{fig:surf_rev_intro}b is $y^2+z^2=(\sqrt{x})^2.$
 
-\mtable{.5}{Introducing surfaces of revolution.}{fig:surf_rev_intro}{%
+\mtable{.39}{Introducing surfaces of revolution.}{fig:surf_rev_intro}{%
 \begin{tabular}{c}
 \myincludegraphicsthree{width=125pt,3Dmenu,activate=onclick,deactivate=onclick,
 3Droll=0,
@@ -368,7 +374,7 @@ Let $y=\sin z$ on $[0,\pi]$. Find the equation of the surface of revolution form
 Note how the surface (and hence the resulting equation) is the same if we began with the curve $x=\sin z$, which is also drawn in Figure \ref{fig:surfrev1}(a).
 }\\
 
-\mtable{.75}{Revolving $y=\sin z$ about the $z$-axis in Example \ref{ex_surfrev1}.}{fig:surfrev1}{%
+\mtable{.62}{Revolving $y=\sin z$ about the $z$-axis in Example \ref{ex_surfrev1}.}{fig:surfrev1}{%
 \begin{tabular}{c}
 \myincludegraphicsthree{width=100pt,3Dmenu,activate=onclick,deactivate=onclick,
 3Droll=0,
@@ -403,7 +409,7 @@ A value of $x$ is a measurement of distance from the $z$-axis. At the distance $
 \example{ex_surfrev2}{Finding equation of surface of revolution}{
 Find the equation of the surface found by revolving $z=\sin x$ about the $z$-axis.}
 {Using Key Idea \ref{idea:surf_of_revol2}, the surface has equation $z=\sin\big(\sqrt{x^2+y^2}\big)$. The curve and surface are graphed in Figure \ref{fig:surfrev2}.
-\mtable{.35}{Revolving $z=\sin x$ about the $z$-axis in Example \ref{ex_surfrev2}.}{fig:surfrev2}{%
+\mtable{.7}{Revolving $z=\sin x$ about the $z$-axis in Example \ref{ex_surfrev2}.}{fig:surfrev2}{%
 \begin{tabular}{c}
 \myincludegraphicsthree{width=100pt,3Dmenu,activate=onclick,deactivate=onclick,
 3Droll=0,
@@ -423,7 +429,7 @@ Find the equation of the surface found by revolving $z=\sin x$ about the $z$-axi
 (b)
 \end{tabular}
 }}\\
-\clearpage
+%\clearpage
 
 \noindent\textbf{\large Quadric Surfaces}\\
 
@@ -444,7 +450,7 @@ When the coefficients $D$, $E$ or $F$ are not zero, the basic shapes of the quad
 3Dc2c=.85 .85 .31,
 3Dcoo=0 0 75,
 3Droo=150,
-3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=1.4,trim=2mm 1mm 2mm 0mm,clip}{.5}{The elliptic paraboloid $z=x^2/4+y^2$.}{fig:quadric1}{figures/figquadric_parb}
+3Dlights=Headlamp,add3Djscript=asylabels.js}{scale=1.4,trim=2mm 1mm 2mm 0mm,clip}{.34}{The elliptic paraboloid $z=x^2/4+y^2$.}{fig:quadric1}{figures/figquadric_parb}
 %\mfigure[scale=1.4,trim=2mm 1mm 2mm 0mm,clip]{.7}{The elliptic paraboloid $z=x^2/4+y^2$.}{fig:quadric1}{figures/figquadric_parb}
 
 We study each shape by considering \sword{traces}, \index{trace}\index{quadric surface!trace}%
@@ -461,11 +467,11 @@ Now consider cross sections parallel to the $x$-$z$ plane. For instance, letting
 
 Thus we see where the elliptic paraboloid gets its name: some cross sections are ellipses, and others are parabolas. 
 
-Such an analysis can be made with each of the quadric surfaces. We give a sample equation of each, provide a sketch with representative traces, and describe these traces.\\
+%Such an analysis can be made with each of the quadric surfaces. We give a sample equation of each, provide a sketch with representative traces, and describe these traces.\\
 
 \clearpage\exercisegeometry\exerciseheader
 \ \vskip0pt
-%\vskip-1in
+\vskip.567 in
 
 \noindent \textbf{Elliptic Paraboloid, \quad$\ds z=\frac{x^2}{a^2}+\frac{y^2}{b^2}$}\\
 \vskip \baselineskip
