--- a/text/13_Cylindrical_Spherical.tex
+++ b/text/13_Cylindrical_Spherical.tex
@@ -12,7 +12,7 @@ The conversions between cylindrical and Cartesian coordinates are given as follo
 Given a point $(r,\theta,z)$ in cylindrical coordinates, its Cartesian coordinates are
 $$x = r \cos\theta, \: y = r \sin\theta, \: z = z.$$
 Given a point $(x,y,z)$ in Cartesian coordinates, we use
-$$r^2 = x^2 + y^2, \: \tan\theta = \dfrac{y}{x}, \: z = z$$
+$$r^2 = x^2 + y^2, \: \tan\theta = \dfrac{y}{x} \text{ (for $x\not=0$)}, \: z = z$$
 to convert to cylindrical coordinates.\\
 }
 
@@ -46,12 +46,12 @@ where each occurrence of $x$ and $y$ in the integrand has been converted to cyli
 \example{ex_cylindervolume}{}{Compute the volume of the half-cylinder $D$ described previously, for $0 \leq r \leq 1$, $0 \leq \theta \leq \pi$, $0 \leq z \leq 3$.}{Since we are computing the volume of $D$, the integrand is $f(x,y,z) = 1$ and so
 $$V = \iiint_D 1 \: dV = \iiint_D \: r \: dr \: d\theta \: dz.$$
 Using our bounds on $r$, $\theta$, and $z$ that describe $D$ as our bounds of integration, we get a volume of
-$$\int_0^3 \int_0^{\pi} \int_0^1 r \: dr \: d\theta \: dz = \int_0^3 \int_0^{\pi} \left( \dfrac{1}{2}r^2 \right]_0^1 \: d\theta \: dz = \int_0^3 \int_0^{\pi} \dfrac{1}{2} \: d\theta \: dz$$
+$$\int_0^3 \int_0^{\pi} \int_0^1 r \: dr \: d\theta \: dz = \int_0^3 \int_0^{\pi} \left. \dfrac{1}{2}r^2 \right|_0^1 \: d\theta \: dz = \int_0^3 \int_0^{\pi} \dfrac{1}{2} \: d\theta \: dz$$
 which evaluates to a volume of $\frac{3\pi}{2}$ cubic units.\\
 }\\
 
 
-\mfigure[scale=0.5]{.3}{$z=1-r$}{fig:fig_cylindrical_spherical_z_equals_1_minus_r}{figures/fig_cylindrical_spherical_z_equals_1_minus_r}
+\mfigure[scale=0.5]{.5}{$z=1-r$}{fig:fig_cylindrical_spherical_z_equals_1_minus_r}{figures/fig_cylindrical_spherical_z_equals_1_minus_r}
 
 
 \example{ex_conevolume}{}{The surface $z = 1 - r$ encloses a conical solid between itself and the $xy$-plane.  Find the volume of this solid as seen in Figure \ref{fig:fig_cylindrical_spherical_z_equals_1_minus_r}.}{The cone $z = 1-r$ intersects the $xy$-plane ($z = 0$) at a radius of $r = 1$.  This puts the bounds on $r$ as $0 \leq r \leq 1$, and clearly the bounds on $\theta$ would be $0 \leq \theta \leq 2\pi$ since the solid is the full cone.  Since the solid is not a cylinder, at least one of the bounds on $z$ must be non-constant.  At any radius $r$, the height of the solid is bounded between the $xy$-plane and the surface $z = 1-r$.  Therefore the bounds on $z$ are $0 \leq z \leq 1-r$, and we will integrate with respect to $dz$ first.  Therefore the volume is
@@ -70,15 +70,21 @@ $$\int_{0}^{1} \int_{0}^{2\pi} \int_{1-r^2}^{2} r^2 \: dz \: d\theta \: dr = 2\p
 kilograms.\\
 }\\
 
-\mfigure[scale=0.5]{.6}{Solid $D$ bounded above by $z=2$, below by $z=1-x^2-y^2$, laterally by $x^2+y^2=1$}{fig:fig_cylindrical_spherical_mass_example}{figures/fig_cylindrical_spherical_mass_example}
+\mfigure[scale=0.5]{.75}{Solid $D$ bounded above by $z=2$, below by $z=1-x^2-y^2$, laterally by $x^2+y^2=1$}{fig:fig_cylindrical_spherical_mass_example}{figures/fig_cylindrical_spherical_mass_example}
 
 \noindent\textbf{\large Triple Integration with Spherical Coordinates}\\
 
 Objects bounded by spheres or cones are more easily described using a different coordinate system called spherical coordinates.  The Earth, for example, is a solid sphere (or near enough). On its surface we use two coordinates - latitude and longitude. To dig inward or fly outward, there is a third coordinate, the distance $\rho$ from the center. This Greek letter \textit{rho} replaces radius $r$ to avoid confusion with cylindrical coordinates. Where $r$ is measured from the $z$-axis, $\rho$ is measured directly from the origin. Thus for any point $(x,y,z)$,
 $$\rho^2 = x^2 + y^2 + z^2$$
-which is the square of the distance between the origin and the point. The angle $\theta$ is the same as in cylindrical coordinates, and it goes from $0$ to $2\pi$ on a full sphere with $\theta = 0$ pointing in the direction of the positive $x$-axis. It is the longitude, which increases as you travel east around the Equator. The angle $\phi$ is new, however. It equals $0$ at the North Pole and $\pi$ (not $2\pi$) at the South Pole. It is the polar angle, measured down from the $z$-axis. The Equator, for example, has a latitude of $0$ degrees but a polar angle of $\phi = \frac{\pi}{2}$ instead. See Figure \ref{fig:fig_cylindrical_spherical_spherical}. 
+which is the square of the distance between the origin and the point. The angle $\theta$ is the same as in cylindrical coordinates, and it goes from $0$ to $2\pi$ on a full sphere with $\theta = 0$ pointing in the direction of the positive $x$-axis. It is the longitude, which increases as you travel east around the Equator. The angle $\phi$ is new, however. It equals $0$ at the North Pole and $\pi$ (not $2\pi$) at the South Pole. It is measured down from the $z$-axis. The Equator, for example, has a latitude of $0$ degrees but has angle $\phi = \frac{\pi}{2}$ instead. See Figure \ref{fig:fig_cylindrical_spherical_spherical}.  (The angle $\rho$ is $\pi$ minus the latitude (in radians) on Earth.)
 
-\mfigure[scale=0.5]{.3}{Spherical coordinates $\rho \phi \theta$}{fig:fig_cylindrical_spherical_spherical}{figures/fig_cylindrical_spherical_spherical}
+\vskip \baselineskip
+\noindent\begin{minipage}{\textwidth}\centering
+\myincludegraphics[scale=.9]{figures/fig_cylindrical_spherical_spherical}
+\captionsetup{type=figure}%
+\caption{Spherical coordinates $(\rho, \theta, \phi)$}\label{fig:fig_cylindrical_spherical_spherical}
+\end{minipage}\\
+\vskip \baselineskip
 
 The spherical coordinates of a point $(x,y,z)$ are given by the ordered triple $(\rho, \theta, \phi)$ where $\rho$, $\theta$, and $\phi$ can be restricted to $\rho \geq 0$, $0 \leq \theta \leq 2\pi$, and $0 \leq \phi \leq \pi$.  The relationship between spherical and Cartesian coordinates is illustrated by Figure \ref{fig:fig_cylindrical_spherical_spherical}.  From the triangles, we have
 $$z = \rho \cos\phi \text{ and } r = \rho \sin\phi$$
@@ -88,7 +94,11 @@ But we know that $x = r \cos\theta$ and $y = r \sin\theta$ from before, so we en
 Given a point $(\rho, \theta, \phi)$ in spherical coordinates, its Cartesian coordinates are
 $$x = \rho \sin\phi \cos\theta, \: y = \rho \sin\phi \sin\theta, \: z = \rho \cos\phi.$$
 Given a point $(x,y,z)$ in Cartesian coordinates, we use
-$$\rho^2 = x^2 + y^2 + z^2, \tan\theta = \dfrac{y}{x}, \cos\phi = \dfrac{z}{\rho} = \dfrac{z}{\sqrt{x^2 + y^2 + z^2}}$$
+\begin{itemize}
+\item $\rho^2 = x^2 + y^2 + z^2$
+\item $\tan\theta = \dfrac{y}{x}$ for $x\not=0$
+\item $\cos\phi = \dfrac{z}{\rho} = \dfrac{z}{\sqrt{x^2 + y^2 + z^2}}$ except at the origin (where $\phi$ can have any value)
+\end{itemize}
 to convert to spherical coordinates.\\
 }
 
@@ -108,16 +118,15 @@ describes a conical solid opening up at a $45$ degree angle with a spherical top
 
 If one is to integrate over a solid $D$ best described in spherical coordinates, such as when finding its volume, one can think of the solid as being divided into spherical boxes or spherical wedges of thickness $d\rho$ and angles $d\theta$ and $d\phi$.  The dimensions of this spherical box, as seen in Figure \ref{fig:fig_cylindrical_spherical_spherical_box}, are $d\rho$, $\rho \: d\phi$ (arc of a circle of radius $\rho$ and angle $d\phi$), and $\rho \: \sin\phi \: d\theta$ (arc of a circle with radius $\rho \: \sin\phi$ and angle $d\theta$). Therefore the approximate volume of the spherical box is
 $$dV = \rho^2 \: \sin\phi \: d\rho \: d\theta \: d\phi.$$
+\mfigure[scale=1]{.32}{Spherical box}{fig:fig_cylindrical_spherical_spherical_box}{figures/fig_cylindrical_spherical_spherical_box}
 To integrate a function $f(x,y,z)$ over a solid $D$ described using spherical coordinates, one would therefore compute
 $$\iiint_D f(x,y,z) \: dA = \iiint_D f(\rho,\theta,\phi) \: \rho^2 \: \sin\phi \: d\rho \: d\theta \: d\phi$$
-where the bounds on $\rho$, $\theta$, and $\phi$ are as appropriate to describe the solid $D$. As a first example of this, we will verify the geometric formula for the volume of a sphere.\\
-
-\mfigure[scale=0.5]{.3}{Spherical box}{fig:fig_cylindrical_spherical_spherical_box}{figures/fig_cylindrical_spherical_spherical_box}
+where the bounds on $\rho$, $\theta$, and $\phi$ are as appropriate to describe the solid $D$. As a first example of this, we will verify the geometric formula for the volume of a sphere.  (Note that we have previously done this two other ways before, in Exercise~\ref{ex:07_02_ex_23} of Section~\ref{sec:disk} using the disk method, and then in Section~\ref{sec:double_int_polar} using a polar double integral.)\\
 
 \example{ex_volume03}{}{Determine the volume of a sphere of radius $R$.}{Let $D$ be the sphere of radius $R$ centered at the origin.  Then we can describe $D$ using spherical coordinates as simply all points $(\rho,\theta,\phi)$ where
 $$0 \leq \rho \leq R, \: 0 \leq \theta \leq 2\pi, \: 0 \leq \phi \leq \pi.$$
 Therefore the volume of this ball is equal to
-$$V = \int_0^{2\pi} \int_0^{\pi} \int_0^R \rho^2 \: \sin\phi \: d\rho \: d\phi \: d\theta = \left( \dfrac{1}{3}\rho^3 \right]_{0}^{R} \left( -\cos\phi \right]_{0}^{\pi} \left( \theta \right]_{0}^{2\pi} = \dfrac{1}{3}R^3 (2) (2\pi)$$
+$$V = \int_0^{2\pi} \int_0^{\pi} \int_0^R \rho^2 \: \sin\phi \: d\rho \: d\phi \: d\theta = \left( \left.\dfrac{1}{3}\rho^3 \right|_{0}^{R}\right) \left( -\cos\phi \big|_{0}^{\pi}\right) \left( \theta \big|_{0}^{2\pi}\right) = \dfrac{1}{3}R^3 (2) (2\pi)$$
 which is equal to the familiar formula for the volume of a sphere being $\dfrac{4}{3}\pi R^3$.\\
 }\\
 
@@ -131,12 +140,15 @@ To describe this solid in spherical coordinates, note that the sphere of radius 
 Lastly, to integrate we need to write the integrand $x^2 + y^2 + z^2$ as $\rho^2$ and include the spherical integration factor $\rho^2 \: \sin\phi$.  Therefore
 \begin{eqnarray*}
 \iiint_E x^2 + y^2 + z^2 \: dV & = & \int_0^{2\pi} \int_0^{\pi/4} \int_0^{\cos\phi} \rho^4 \: \sin\phi \: d\rho \: d\phi \: d\theta \\
- & = & 2\pi \: \int_0^{\pi/4} \sin\phi \left( \dfrac{1}{5} \rho^5 \right]_{0}^{\cos\phi} \: d\phi \\
+ & = & 2\pi \: \int_0^{\pi/4} \sin\phi \left. \dfrac{1}{5} \rho^5 \right|_{0}^{\cos\phi} \: d\phi \\
  & = & \dfrac{2}{5}\pi \int_0^{\pi/4} \cos^5\phi \sin\phi \: d\phi \\
- & = & \dfrac{2}{5}\pi \left( -\dfrac{1}{6}\cos^6\phi \right]_{0}^{\pi/4} \\
+ & = & \dfrac{2}{5}\pi \left(\left. -\dfrac{1}{6}\cos^6\phi \right|_{0}^{\pi/4}\right) \\
  & = & \dfrac{2}{5}\pi \left( \dfrac{1}{8} - 1 \right) = \dfrac{7\pi}{120} \\
 \end{eqnarray*}
 }\\
 
+This chapter investigated the natural follow--on to partial derivatives: iterated integration. We learned how to use the bounds of a double integral to describe a region in the plane using both rectangular and polar coordinates, then later expanded to use the bounds of a triple integral to describe a region in space. We used double integrals to find volumes under surfaces, surface area, and the center of mass of lamina; we used triple integrals as an alternate method of finding volumes of space regions and also to find the center of mass of a region in space.
+
+Integration does not stop here. We could continue to iterate our integrals, next investigating ``quadruple integrals'' whose bounds describe a region in 4--dimensional space (which are very hard to visualize).   We can also look back to ``regular'' integration where we found the area under a curve in the plane. A natural analogue to this is finding the ``area under a curve,'' where the curve is in space, not in a plane.  These are just two of many avenues to explore under the heading of ``integration.'' 
 
 \printexercises{exercises/13_07_exercises}
