--- a/exercises/08_04_ex_16.tex
+++ b/exercises/08_04_ex_16.tex
@@ -1,4 +1,4 @@
-{$\ds\sum_{n=1}^\infty \left(\frac{.9n^2-n-3}{n^2+n+3}\right)^n$
+{$\ds\sum_{n=1}^\infty \left(\frac{0.9n^2-n-3}{n^2+n+3}\right)^n$
 }
 {Converges
 }
