Removed prefaces from compiling

--- a/text/front_matter_and_cover.tex
+++ b/text/front_matter_and_cover.tex
@@ -66,12 +66,12 @@
 \tableofcontents
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
-\phantomsection
-\prefacegeometry
-\addcontentsline{toc}{chapter}{Preface}
-\input{text/preface}
-\restoregeometry
-\clearpage{\pagestyle{empty}\cleardoublepage}
+%\phantomsection
+%\prefacegeometry
+%\addcontentsline{toc}{chapter}{Preface}
+%\input{text/preface}
+%\restoregeometry
+%\clearpage{\pagestyle{empty}\cleardoublepage}
 
 
 %%%%
