--- a/text/front_matter_and_coverII.tex
+++ b/text/front_matter_and_coverII.tex
@@ -63,12 +63,12 @@
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
 
-\phantomsection
-\prefacegeometry
-\addcontentsline{toc}{chapter}{Preface}
-\input{text/prefaceII}
-\restoregeometry
-\clearpage{\pagestyle{empty}\cleardoublepage}
+%\phantomsection
+%\prefacegeometry
+%\addcontentsline{toc}{chapter}{Preface}
+%\input{text/prefaceII}
+%\restoregeometry
+%\clearpage{\pagestyle{empty}\cleardoublepage}
 %%%%%
 %\includepdf[pages={1,2}]{CalculusTOC.pdf}
 %%%%
