--- a/text/front_matter_and_coverIII.tex
+++ b/text/front_matter_and_coverIII.tex
@@ -65,12 +65,12 @@
 \tableofcontents
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
-\phantomsection
-\prefacegeometry
-\addcontentsline{toc}{chapter}{Preface}
-\input{text/prefaceIII}
-\restoregeometry
-\clearpage{\pagestyle{empty}\cleardoublepage}
+%\phantomsection
+%\prefacegeometry
+%\addcontentsline{toc}{chapter}{Preface}
+%\input{text/prefaceIII}
+%\restoregeometry
+%\clearpage{\pagestyle{empty}\cleardoublepage}
 
 %%%%
 \mainmatter
