--- a/exercises/06_09_ex_24.tex
+++ b/exercises/06_09_ex_24.tex
@@ -1,4 +1,4 @@
-{$\ds \int x^2e^{x^2}\ dx$ (Hint: Use integration by parts with $u=x$, $dv=xe^{x^2}$.)}
+{$\ds \int x^2e^{x^2}\ dx$ (Hint: Use integration by parts with $u=x$, $dv=xe^{x^2}\ dx$.)}
 {$\frac{1}{2}x e^{x^2} - \frac{\sqrt{\pi}}{4}\erfi x +C$
 }
 
