--- a/text/front_matter_and_coverI.tex
+++ b/text/front_matter_and_coverI.tex
@@ -68,12 +68,12 @@
 \tableofcontents
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
-\phantomsection
-\prefacegeometry
-\addcontentsline{toc}{chapter}{Preface}
-\input{text/prefaceI}
-\restoregeometry
-\clearpage{\pagestyle{empty}\cleardoublepage}
+%\phantomsection
+%\prefacegeometry
+%\addcontentsline{toc}{chapter}{Preface}
+%\input{text/prefaceI}
+%\restoregeometry
+%\clearpage{\pagestyle{empty}\cleardoublepage}
 
 %%%%%
 %\includepdf[pages={1,2}]{CalculusTOC.pdf}
